adicionar pet colocando as fotos na pasta(teste 1).

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,3 +86,8 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+$chat-bubble:(
+  background-left: #fea21c,
+  background-right: #8abefa,
+);
