--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,13 +33,13 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
-$colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
-);
+//$colors: (
+//  primary:    #488aff,
+//  secondary:  #32db64,
+//  danger:     #f53d3d,
+//  light:      #f4f4f4,
+//  dark:       #222
+//);
 
 
 // App iOS Variables
@@ -80,10 +80,6 @@ $colors: (
 
 @import "ionic.ionicons";
 
-
-// Fonts
-// --------------------------------------------------
-
 @import "roboto";
 @import "noto-sans";
 
@@ -91,3 +87,42 @@ $chat-bubble:(
   background-left: #fea21c,
   background-right: #8abefa,
 );
+
+$font-path: "../assets/fonts";
+
+@import "ionic.globals";
+
+$colors: (
+        primary:    #d52f39,
+        secondary:  #770a0e,
+        danger:     #ff0000,
+        light:      #fff,
+        dark:       #000
+);
+
+$size_extrasmall:1.0rem;
+$size_small:1.3rem;
+$size_normal:1.3rem;
+$size_large:1.8rem;
+$size_extralarge:2.1rem;
+
+$border-color:#ccc;
+
+$rprimary : #fff;
+$rsecondary: #C9C7D3;
+$pholder:#666;
+$border:#ccc;
+$button:#0d47a1;
+$loginSignupGradiant:#768fff;
+// Manage toolbar color
+$toolbar-background:color($colors, primary);
+
+
+// Manage Menu Style
+$menu_bg_color:color($colors, secondary);
+$menu_font_color:$rsecondary;
+$menu_font_size:$size_normal;
+$menu_separator_line_color:#4f0306;
+$menu_avatar_bg_color:color($colors, light);
+$menu_avatar_font_color:color($colors, dark);
+$menu_avatar_text_color:color($colors, light);
