listando mensagens e colocando do lado certo.(rever cores.)

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,8 +84,8 @@ $app-direction: ltr;
 @import "noto-sans";
 
 $chat-bubble:(
-  background-left: #fea21c,
-  background-right: #8abefa,
+  background-left: #ffffff,
+  background-right: #78fa88,
 );
 
 $font-path: "../assets/fonts";
