--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -112,7 +112,7 @@ $rprimary : #fff;
 $rsecondary: #C9C7D3;
 $pholder:#666;
 $border:#ccc;
-$button:#0d47a1;
+$button:#4f0306;
 $loginSignupGradiant:#768fff;
 // Manage toolbar color
 $toolbar-background:color($colors, primary);
