meus pets, loadings e adicionar pet

--- a/src/pages/perfil/perfil.scss
+++ b/src/pages/perfil/perfil.scss
@@ -1,3 +1,10 @@
 page-perfil {
 
+  #gif{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -125px;
+  }
 }
