--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,7 +17,7 @@
         </h2>
       </ion-item>
 
-        <ion-item color="assertive" menuClose="" on-click="goToFiltros()" id="menu-list-item2">
+        <ion-item color="assertive" menuClose="" (click)="filtrar()" id="menu-list-item2">
           <ion-icon name="options" item-left></ion-icon>
           Filtros
         </ion-item>
