--- a/src/app/app.html
+++ b/src/app/app.html
@@ -44,6 +44,13 @@
       <img src="assets/img/instagram.png" style="width: 49%;"/>
       </a>
       </ion-list>
+
+    <ion-item>
+      <button id="logoffButton" menuClose="" ion-button
+              color="assertive" ion-button block color="assertive" style="border-radius:100px 100px 100px 100px;" (click)="logoff()">
+        Sair
+      </button>
+    </ion-item>
   </ion-content>
 </ion-menu>
 
