--- a/src/components/salas-chat/salas-chat.html
+++ b/src/components/salas-chat/salas-chat.html
@@ -1,15 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      Chat
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content  padding class="chatPage">
+<div pading>
   <ion-item>
     <a class="tab-item">
       Mensagens Recebidas
@@ -39,5 +28,4 @@
       <h3>{{msg.nomePet}}</h3>
     </ion-item>
   </ion-list>
-
-</ion-content>
+</div>
