ion-bacdrop set visible

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,3 +24,9 @@ ion-menu{
   text-align:center;
   border-bottom: 1px dotted #fff; line-height: 0.1em; margin:15px auto;}
 .hrLine span { background:#fff; padding:0 5px;  font-size:18px; color:#000;}
+
+
+ion-backdrop {
+  visibility: initial !important;
+  background: transparent;
+}
