Mudanca de estilo no maps

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,42 +8,42 @@
   </ion-header>
   <ion-content id="side-menu21">
     <ion-list id="menu-list8">
-      <ion-item color="none" id="menu-list-item20">
-        <ion-avatar item-left>
-          <img />
-        </ion-avatar>
-        <h2>
-          Marlon
-        </h2>
-      </ion-item>
+      <!--<ion-item color="none" id="menu-list-item20">-->
+        <!--<ion-avatar item-left>-->
+          <!--<img />-->
+        <!--</ion-avatar>-->
+        <!--<h2>-->
+          <!--Marlon-->
+        <!--</h2>-->
+      <!--</ion-item>-->
 
-        <ion-item color="assertive" menuClose="" (click)="filtrar()" id="menu-list-item2">
-          <ion-icon name="options" item-left></ion-icon>
-          Filtros
-        </ion-item>
-        <ion-item color="assertive" menuClose="" on-click="goToNotificacoes()" id="menu-list-item1">
-          <ion-icon name="notifications" item-left></ion-icon>
-          Notificações
-        </ion-item>
-        <ion-item color="assertive" menuClose="" on-click="goToMeusPets()" id="menu-list-item3">
-          <ion-icon name="paw" item-left></ion-icon>
-          Meus Pets
-        </ion-item>
-        <ion-item color="assertive" menuClose="" on-click="goToAvalie()" id="menu-list-item4">
-          <ion-icon name="happy" item-left></ion-icon>
-          Avalie o APP
-        </ion-item>
-        <ion-item color="assertive" menuClose="" on-click="goToApoioEPatrocinio()" id="menu-list-item5">
-          <ion-icon name="cafe" item-left></ion-icon>
-          Apoio e Patrocínio
-        </ion-item>
-      <a href="https://www.facebook.com/Adota-Pet-1932861880287512/?ref=br_rs">
-        <img src="assets/img/facebook.png" style="width: 49%;"/>
-      </a>
-      <a href="https://www.instagram.com/adotapetapp/">
-      <img src="assets/img/instagram.png" style="width: 49%;"/>
-      </a>
-      </ion-list>
+        <!--<ion-item color="assertive" menuClose="" (click)="filtrar()" id="menu-list-item2">-->
+          <!--<ion-icon name="options" item-left></ion-icon>-->
+          <!--Filtros-->
+        <!--</ion-item>-->
+        <!--<ion-item color="assertive" menuClose="" on-click="goToNotificacoes()" id="menu-list-item1">-->
+          <!--<ion-icon name="notifications" item-left></ion-icon>-->
+          <!--Notificações-->
+        <!--</ion-item>-->
+        <!--<ion-item color="assertive" menuClose="" on-click="goToMeusPets()" id="menu-list-item3">-->
+          <!--<ion-icon name="paw" item-left></ion-icon>-->
+          <!--Meus Pets-->
+        <!--</ion-item>-->
+        <!--<ion-item color="assertive" menuClose="" on-click="goToAvalie()" id="menu-list-item4">-->
+          <!--<ion-icon name="happy" item-left></ion-icon>-->
+          <!--Avalie o APP-->
+        <!--</ion-item>-->
+        <!--<ion-item color="assertive" menuClose="" on-click="goToApoioEPatrocinio()" id="menu-list-item5">-->
+          <!--<ion-icon name="cafe" item-left></ion-icon>-->
+          <!--Apoio e Patrocínio-->
+        <!--</ion-item>-->
+      <!--<a href="https://www.facebook.com/Adota-Pet-1932861880287512/?ref=br_rs">-->
+        <!--<img src="assets/img/facebook.png" style="width: 49%;"/>-->
+      <!--</a>-->
+      <!--<a href="https://www.instagram.com/adotapetapp/">-->
+      <!--<img src="assets/img/instagram.png" style="width: 49%;"/>-->
+      <!--</a>-->
+      <!--</ion-list>-->
 
     <ion-item>
       <button id="logoffButton" menuClose="" ion-button
