Mudanca de estilo no maps

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,57 +1,57 @@
-<ion-menu [content]="mainContent">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>
-        Menu
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content id="side-menu21">
-    <ion-list id="menu-list8">
-      <!--<ion-item color="none" id="menu-list-item20">-->
-        <!--<ion-avatar item-left>-->
-          <!--<img />-->
-        <!--</ion-avatar>-->
-        <!--<h2>-->
-          <!--Marlon-->
-        <!--</h2>-->
-      <!--</ion-item>-->
+<!--<ion-menu [content]="mainContent">-->
+  <!--<ion-header>-->
+    <!--<ion-toolbar>-->
+      <!--<ion-title>-->
+        <!--Menu-->
+      <!--</ion-title>-->
+    <!--</ion-toolbar>-->
+  <!--</ion-header>-->
+  <!--<ion-content id="side-menu21">-->
+    <!--<ion-list id="menu-list8">-->
+      <!--&lt;!&ndash;<ion-item color="none" id="menu-list-item20">&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-avatar item-left>&ndash;&gt;-->
+          <!--&lt;!&ndash;<img />&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-avatar>&ndash;&gt;-->
+        <!--&lt;!&ndash;<h2>&ndash;&gt;-->
+          <!--&lt;!&ndash;Marlon&ndash;&gt;-->
+        <!--&lt;!&ndash;</h2>&ndash;&gt;-->
+      <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
 
-        <!--<ion-item color="assertive" menuClose="" (click)="filtrar()" id="menu-list-item2">-->
-          <!--<ion-icon name="options" item-left></ion-icon>-->
-          <!--Filtros-->
-        <!--</ion-item>-->
-        <!--<ion-item color="assertive" menuClose="" on-click="goToNotificacoes()" id="menu-list-item1">-->
-          <!--<ion-icon name="notifications" item-left></ion-icon>-->
-          <!--Notificações-->
-        <!--</ion-item>-->
-        <!--<ion-item color="assertive" menuClose="" on-click="goToMeusPets()" id="menu-list-item3">-->
-          <!--<ion-icon name="paw" item-left></ion-icon>-->
-          <!--Meus Pets-->
-        <!--</ion-item>-->
-        <!--<ion-item color="assertive" menuClose="" on-click="goToAvalie()" id="menu-list-item4">-->
-          <!--<ion-icon name="happy" item-left></ion-icon>-->
-          <!--Avalie o APP-->
-        <!--</ion-item>-->
-        <!--<ion-item color="assertive" menuClose="" on-click="goToApoioEPatrocinio()" id="menu-list-item5">-->
-          <!--<ion-icon name="cafe" item-left></ion-icon>-->
-          <!--Apoio e Patrocínio-->
-        <!--</ion-item>-->
-      <!--<a href="https://www.facebook.com/Adota-Pet-1932861880287512/?ref=br_rs">-->
-        <!--<img src="assets/img/facebook.png" style="width: 49%;"/>-->
-      <!--</a>-->
-      <!--<a href="https://www.instagram.com/adotapetapp/">-->
-      <!--<img src="assets/img/instagram.png" style="width: 49%;"/>-->
-      <!--</a>-->
-      <!--</ion-list>-->
+        <!--&lt;!&ndash;<ion-item color="assertive" menuClose="" (click)="filtrar()" id="menu-list-item2">&ndash;&gt;-->
+          <!--&lt;!&ndash;<ion-icon name="options" item-left></ion-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;Filtros&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-item color="assertive" menuClose="" on-click="goToNotificacoes()" id="menu-list-item1">&ndash;&gt;-->
+          <!--&lt;!&ndash;<ion-icon name="notifications" item-left></ion-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;Notificações&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-item color="assertive" menuClose="" on-click="goToMeusPets()" id="menu-list-item3">&ndash;&gt;-->
+          <!--&lt;!&ndash;<ion-icon name="paw" item-left></ion-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;Meus Pets&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-item color="assertive" menuClose="" on-click="goToAvalie()" id="menu-list-item4">&ndash;&gt;-->
+          <!--&lt;!&ndash;<ion-icon name="happy" item-left></ion-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;Avalie o APP&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-item color="assertive" menuClose="" on-click="goToApoioEPatrocinio()" id="menu-list-item5">&ndash;&gt;-->
+          <!--&lt;!&ndash;<ion-icon name="cafe" item-left></ion-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;Apoio e Patrocínio&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+      <!--&lt;!&ndash;<a href="https://www.facebook.com/Adota-Pet-1932861880287512/?ref=br_rs">&ndash;&gt;-->
+        <!--&lt;!&ndash;<img src="assets/img/facebook.png" style="width: 49%;"/>&ndash;&gt;-->
+      <!--&lt;!&ndash;</a>&ndash;&gt;-->
+      <!--&lt;!&ndash;<a href="https://www.instagram.com/adotapetapp/">&ndash;&gt;-->
+      <!--&lt;!&ndash;<img src="assets/img/instagram.png" style="width: 49%;"/>&ndash;&gt;-->
+      <!--&lt;!&ndash;</a>&ndash;&gt;-->
+      <!--&lt;!&ndash;</ion-list>&ndash;&gt;-->
 
-    <ion-item>
-      <button id="logoffButton" menuClose="" ion-button
-              color="assertive" ion-button block color="assertive" style="border-radius:100px 100px 100px 100px;" (click)="logoff()">
-        Sair
-      </button>
-    </ion-item>
-  </ion-content>
-</ion-menu>
+    <!--<ion-item>-->
+      <!--<button id="logoffButton" menuClose="" ion-button-->
+              <!--color="assertive" ion-button block color="assertive" style="border-radius:100px 100px 100px 100px;" (click)="logoff()">-->
+        <!--Sair-->
+      <!--</button>-->
+    <!--</ion-item>-->
+  <!--</ion-content>-->
+<!--</ion-menu>-->
 
-<ion-nav #mainContent [root]="rootPage"></ion-nav>
+<ion-nav [root]="rootPage"></ion-nav>
