Traducao do APP

--- a/src/components/meus-pets/meus-pets.html
+++ b/src/components/meus-pets/meus-pets.html
@@ -16,7 +16,7 @@
 
         <button ion-button end (click)="marcarComoAdotado(pet.payload.key, pet.payload.val())" style="position: absolute; right: 51px; height: 30px; bottom: 8px;">
             <ion-icon icon-start name="md-paw"></ion-icon>
-           Adotado
+           {{ "Adotado" | translate }}
         </button>
 
 
@@ -36,7 +36,6 @@
         <h2>
             {{pet.payload.val().nome}}
         </h2>
-
         <ion-icon name="ios-paw" color="assertive" item-end
                   (click)="marcarComoAtivo(pet.payload.key, pet.payload.val())"></ion-icon>
 
