--- a/src/components/salas-chat/salas-chat.html
+++ b/src/components/salas-chat/salas-chat.html
@@ -1,7 +1,7 @@
 <div pading>
   <ion-item>
     <a class="tab-item">
-      Mensagens Recebidas
+      {{ "Mensagens Recebidas" | translate }}
     </a>
   </ion-item>
   <ion-list no-lines >
@@ -16,7 +16,7 @@
 
   <ion-item>
     <a class="tab-item">
-      Mensagens Enviadas
+      {{ "Mensagens Enviadas" | translate }}
     </a>
   </ion-item>
   <ion-list no-lines >
