--- a/src/components/meus-pets/meus-pets.html
+++ b/src/components/meus-pets/meus-pets.html
@@ -5,44 +5,43 @@
         (ionInput)="onInput($event)"
         (keyup.enter)="dismiss()">
 </ion-searchbar>
-<ion-list id="meusPets-list3" *ngFor="let pet of myPets.ativos">
-    <ion-item color="assertive" id="meusPets-list-item6">
-        <ion-avatar item-left>
-            <img src="{{pet.payload.val().fotoUrls[0]}}"/>
-        </ion-avatar>
-        <h2>
-            {{pet.payload.val().nome}}
-        </h2>
+<div *ngIf="myId">
+    <ion-list id="meusPets-list3" *ngFor="let pet of myPets.ativos">
+        <ion-item color="assertive" id="meusPets-list-item6">
+            <ion-avatar item-left>
+                <img src="{{pet.payload.val().fotoUrls[0]}}"/>
+            </ion-avatar>
+            <h2>
+                {{pet.payload.val().nome}}
+            </h2>
 
-        <button ion-button end (click)="marcarComoAdotado(pet.payload.key, pet.payload.val())" style="position: absolute; right: 51px; height: 30px; bottom: 8px;">
-            <ion-icon icon-start name="md-paw"></ion-icon>
-           {{ "Adotado" | translate }}
-        </button>
+            <button ion-button end (click)="marcarComoAdotado(pet.payload.key, pet.payload.val())"
+                    style="position: absolute; right: 51px; height: 30px; bottom: 8px;">
+                <ion-icon icon-start name="md-paw"></ion-icon>
+                {{ "Adotado" | translate }}
+            </button>
 
+            <ion-icon name="trash" color="assertive" item-end
+                      (click)="deletePet(pet.payload.key, pet.payload.val())"></ion-icon>
 
+        </ion-item>
+    </ion-list>
+    <ion-list id="meusPets-adotados" *ngFor="let pet of myPets.adotados">
+        <ion-item color="assertive" id="meusPets-list-item">
+            <ion-avatar item-left>
+                <img src="{{pet.payload.val().fotoUrls[0]}}"/>
+            </ion-avatar>
+            <h2>
+                {{pet.payload.val().nome}}
+            </h2>
+            <ion-icon name="ios-paw" color="assertive" item-end
+                      (click)="marcarComoAtivo(pet.payload.key, pet.payload.val())"></ion-icon>
 
+            <ion-icon name="remove" color="assertive" item-end></ion-icon>
 
-        <ion-icon name="trash" color="assertive" item-end
-                  (click)="deletePet(pet.payload.key, pet.payload.val())"></ion-icon>
+            <ion-icon name="trash" color="assertive" item-end
+                      (click)="deletePet(pet.payload.key, pet.payload.val())"></ion-icon>
 
-    </ion-item>
-</ion-list>
-
-<ion-list id="meusPets-adotados" *ngFor="let pet of myPets.adotados">
-    <ion-item color="assertive" id="meusPets-list-item">
-        <ion-avatar item-left>
-            <img src="{{pet.payload.val().fotoUrls[0]}}"/>
-        </ion-avatar>
-        <h2>
-            {{pet.payload.val().nome}}
-        </h2>
-        <ion-icon name="ios-paw" color="assertive" item-end
-                  (click)="marcarComoAtivo(pet.payload.key, pet.payload.val())"></ion-icon>
-
-        <ion-icon name="remove" color="assertive" item-end></ion-icon>
-
-        <ion-icon name="trash" color="assertive" item-end
-                  (click)="deletePet(pet.payload.key, pet.payload.val())"></ion-icon>
-
-    </ion-item>
-</ion-list>
+        </ion-item>
+    </ion-list>
+</div>
