--- a/src/pages/perfil/perfil.scss
+++ b/src/pages/perfil/perfil.scss
@@ -7,4 +7,28 @@ page-perfil {
     margin-top: -100px;
     margin-left: -125px;
   }
+
+  .item-ios {
+    padding-left: 16px;
+    padding-left: 16px;
+    border-radius: 0;
+    position: relative;
+    font-size: 1.7rem;
+    color: #fff;
+    background-color: #fff0;
+    -webkit-transition: background-color 200ms linear;
+    transition: background-color 200ms linear;
+  }
+
+  .item-md {
+    padding-left: 16px;
+    padding-left: 16px;
+    border-radius: 0;
+    position: relative;
+    font-size: 1.7rem;
+    color: #fff;
+    background-color: #fff0;
+    -webkit-transition: background-color 200ms linear;
+    transition: background-color 200ms linear;
+  }
 }
