--- a/src/components/please-login/please-login.html
+++ b/src/components/please-login/please-login.html
@@ -1,1 +1,9 @@
-<button ion-button full (click)="gotoLogin()">Log In</button>
+<p style="
+    text-align: center;
+    font-size: 16px;
+    color: #fff;
+    margin-top: 82%;
+"> Faça o login para ter o acesso</p>
+
+
+<button style="background-color:#fff; color: red;" ion-button full round outline (click)="gotoLogin()">Login</button>
