--- a/src/pages/adicionar-pet/adicionar-pet.scss
+++ b/src/pages/adicionar-pet/adicionar-pet.scss
@@ -1,3 +1,7 @@
 page-adicionar-pet {
 
-}
+  .bgdLogin {
+    background-image: url(../../assets/dogBackG.png);
+    background-size: 100% 100%;
+
+}}
