Listagem dos pets melhorada, cadastrar usuario e login melhorados.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="mainContent">
+<!-- <ion-menu [content]="mainContent">
   <ion-header>
     <ion-toolbar>
       <ion-title>
@@ -43,7 +43,7 @@
       <!--<a href="https://www.instagram.com/adotapetapp/">-->
       <!--<img src="assets/img/instagram.png" style="width: 49%;"/>-->
       <!--</a>-->
-      <!--</ion-list>-->
+      <!--</ion-list>
         <ion-fab top right>
             <button ion-fab color="danger" (click)="logOf()">
                 <ion-icon name="log-out"></ion-icon>
@@ -58,5 +58,5 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-
+-->
 <ion-nav [root]="rootPage"></ion-nav>
